# indic-text-normalization

./: LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml  requirements.txt  requirements_test.txt  setup.py  test_assamese.ipynb  verify_package.py
data/test_cases/: README.md  ase.txt  bho.txt  bn.txt  cg.txt  en.txt  gu.txt  hi.txt  kn.txt  mag.txt  mai.txt  mr.txt  ne.txt  sa.txt  ta.txt  te.txt
indic_text_normalization/: __init__.py  data_loader_utils.py  normalize.py  token_parser.py
indic_text_normalization/as/: graph_utils.py
indic_text_normalization/bho/: __init__.py  graph_utils.py
indic_text_normalization/bn/: __init__.py  graph_utils.py
indic_text_normalization/brx/: __init__.py  graph_utils.py
indic_text_normalization/doi/: __init__.py  graph_utils.py
indic_text_normalization/en/: __init__.py  clean_eval_data.py  graph_utils.py
indic_text_normalization/gu/: __init__.py  graph_utils.py
indic_text_normalization/hi/: __init__.py
indic_text_normalization/hne/: __init__.py  graph_utils.py
indic_text_normalization/hybrid/: model_utils.py  utils.py  wfst_lm_rescoring.py
indic_text_normalization/kn/: __init__.py
indic_text_normalization/mag/: __init__.py  graph_utils.py
indic_text_normalization/mai/: __init__.py  graph_utils.py
indic_text_normalization/ml/: __init__.py  graph_utils.py
indic_text_normalization/mr/: __init__.py  graph_utils.py
indic_text_normalization/ne/: __init__.py
notebooks/: test_bengali.ipynb  test_bhojpuri.ipynb  test_chhattisgarhi.ipynb  test_english.ipynb  test_gujarati.ipynb  test_hindi.ipynb  test_kannada.ipynb  test_magadhi.ipynb  test_maithili.ipynb  test_marathi.ipynb  test_tamil.ipynb  test_tamil.py  test_telugu.ipynb  testcases_mr.ipynb
tests/: Bodo_test.ipynb  Nepali_test.ipynb  Punjabi_test.ipynb  README.md  Sanskrit_test.ipynb  dogri_test.ipynb  run_tests.py  test_chhattisgarhi.ipynb  test_english.ipynb
(+1853 files in other folders)
